--- a/static/css/gaia.css
+++ b/static/css/gaia.css
@@ -975,6 +975,7 @@ a,
   display: block;
   padding: 0 15px;
   text-align: center;
+  padding-top: 30px;
 }
 .section .title-area .description {
   font-size: 16px;
